--- a/azure-active-directory.qmd
+++ b/azure-active-directory.qmd
@@ -1,14 +1,14 @@
 ---
-title: "Azure Active Directory"
+title: "Azure Governance"
 ---
 
 About this site
 
-We base our Theme: Master Azure Active Directory on Planning a [Minimum Viable Nothing (MVN)](https://github.com/vanHeemstraSystems/minimum-viable-nothing).
+We base our Theme: Master Azure Governance on Planning a [Minimum Viable Nothing (MVN)](https://github.com/vanHeemstraSystems/minimum-viable-nothing).
 
 ## 2. Find the **Opportunities**.
 
-See [Learning - Azure Active Directory](https://vanheemstrasystems.github.io/learning-azure-active-directory/)
+See [Learning - Azure Governance](https://vanheemstrasystems.github.io/learning-azure-governance/)
 
 ### a) Map out the **User Journey(s)**.
 
