--- a/index.qmd
+++ b/index.qmd
@@ -53,3 +53,5 @@ __topicsChart = {
 # Master Azure Monitoring
 
 # Master Azure Networks
+
+# Master Azure Business Continuity and Disaster Recovery
