--- a/index.qmd
+++ b/index.qmd
@@ -55,3 +55,5 @@ __topicsChart = {
 # Master Azure Networks
 
 # Master Azure Business Continuity and Disaster Recovery
+
+# Master Azure Migrations
